fix(navbar): prevent horizontal overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -673,7 +673,7 @@ hr {
   margin: auto;
   padding: 16px 24px;
   display: grid;
-  grid-template-columns: 324px 1fr 324px;
+  grid-template-columns: minmax(200px, 324px) 1fr minmax(200px, auto);
 }
 @media (max-width: 1191px) {
   .navbar__inner {
